--- a/community.html
+++ b/community.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Community | Water Monitoring System</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="community.html">Community</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Community Participation</h1>
+    <p>We work closely with local residents to educate, report issues, and collaborate in improving water quality.</p>
+  </header>
+
+  <section>
+    <h2>How You Can Help</h2>
+    <ul>
+      <li>Report water quality issues</li>
+      <li>Join awareness campaigns</li>
+      <li>Provide feedback to local authorities</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 AbVance Co. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
